search button completed

--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html lang="en">
 <title>GifTastic Gaming Gifs</title>
 <body>
-  <div id="buttons-view"></div>
-  <button data-game="Overwatch">Overwatch</button>
-  <button data-game="Mario Bros">
+  <div id="buttons-view">
+  <button class= "btn" data-game="Overwatch">Overwatch</button>
+  <button class= "btn" data-game="Mario Bros">
     Mario Bros
   </button>
-  <button data-game="The Legend of Zelda">
+  <button class= "btn" data-game="The Legend of Zelda">
     The Legend of Zelda
   </button>
-  <button data-game="Master Chief">
+  <button class= "btn" data-game="Master Chief">
     Halo
   </button>
-  <button data-game="Fallout 3">
+  <button class= "btn" data-game="Fallout 3">
     Fallout
   </button>
+</div>
   <div class= "search">
   <label for="game-input">Search For a Game!</label>
       <input type="text" id="game-input">
