--- a/index.html
+++ b/index.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!doctype html>
+  <html lang="en">
+      <!-- Required meta tags -->
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
+      <!-- Bootstrap CSS -->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    </head>
+    <body>
+        
+      <!-- Optional JavaScript -->
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </body>
+  </html>
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <title>GifTastic Gaming Gifs</title>
 <body>
+  <h1>VIDEO GAMES FOR ALL</h1>
   <div id="buttons-view">
-  <button class= "btn" data-game="Overwatch">Overwatch</button>
-  <button class= "btn" data-game="Mario Bros">
+  <button class="btn btn-success" class= "btn" data-game="Overwatch">Overwatch</button>
+  <button class="btn btn-success" class= "btn" data-game="Mario Bros">
     Mario Bros
   </button>
-  <button class= "btn" data-game="The Legend of Zelda">
+  <button class="btn btn-success" class= "btn" data-game="The Legend of Zelda">
     The Legend of Zelda
   </button>
-  <button class= "btn" data-game="Master Chief">
+  <button class="btn btn-success" class= "btn" data-game="Master Chief">
     Halo
   </button>
-  <button class= "btn" data-game="Fallout 3">
+  <button class="btn btn-success" class= "btn" data-game="Fallout 3">
     Fallout
   </button>
 </div>
   <div class= "search">
-  <label for="game-input">Search For a Game!</label>
-      <input type="text" id="game-input">
+      <input type="text" id="game-input" placeholder="Search for a game">
       <input id="add-game" type="submit" value="Search">
     </div>
   <div id="gifs-appear-here">
